# bg-remover

./: .envrc  app.py  pyproject.toml
backend/: main.py  pyproject.toml
backend/api/: router.py
backend/api/routes/: __init__.py  rembg.py
backend/core/: rembg.py
backend/services/: rembg_service.py
client/: .cta.json  README.md  index.html  package.json
client/src/constants/: models.ts
client/src/routes/: index.tsx
client/src/utils/: image.ts
templates/: index.html
